# 3D_ComputerGraphics

./: .gitignore  CMakeLists.txt  ProjectConfig.h.in  README.md  main.cpp
assets/: menuxml.xml
src/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  MatrixFunctions.cpp  MatrixFunctions.h
src/libs/: CMakeLists.txt
src/model/: CMakeLists.txt  ObjModel.cpp  ObjModel.h  ObjModelStructs.h
